Fix selection printing

Personally I think clipping away selection like this is a poor way to
handle selection during printing. It would be better if we instead only
layout the selected part of the text and paint that just.

BUG: 415570